new page for nutsfall

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>qli.jp</title>
+    <script src="https://kit.fontawesome.com/0408cbb145.js" crossorigin="anonymous"></script>
+    <title>Hironori Kuriaki</title>
   </head>
   <body>
     <header>
@@ -14,11 +15,14 @@
       </nav>
     </header>
     <main>
-      <h1>Welcome to qli.jp</h1>
-      <p>Please my blog. <a href="https://qli.jp/">Things on a planet</a></p>
+      <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
+      <h1>Hironori Kuriaki</h1>
+      <div class="tagline"></div>
+      <a href="https://note.com/nutsfall"><i class="fa-solid fa-blog"></i></a>
+      <a href="https://twitter.com/nutsfall"><i class="fa-brands fa-twitter"></i></a>
     </main>
     <footer>
-      <p>Copyright &copy; hiro</p>
+      <p>Copyright &copy; nutsfall.me</p>
     </footer>
   </body>
 </html>
