add rel and remove footer

--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
       <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
       <h1>Hironori Kuriaki</h1>
       <div class="tagline"></div>
-      <a href="https://note.com/nutsfall"><i class="fa-solid fa-blog"></i></a>
-      <a href="https://twitter.com/nutsfall"><i class="fa-brands fa-twitter"></i></a>
+      <a href="https://note.com/nutsfall" rel="me"><i class="fa-solid fa-blog"></i></a>
+      <a href="https://twitter.com/nutsfall" rel="me"><i class="fa-brands fa-twitter"></i></a>
     </main>
-    <footer>
-      <p>Copyright &copy; nutsfall.me</p>
-    </footer>
   </body>
 </html>
