--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet"  href="https://fonts.googleapis.com/css2?family=Poppins">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/0408cbb145.js" crossorigin="anonymous"></script>
     <title>Hironori Kuriaki</title>
   </head>
@@ -9,8 +11,12 @@
       <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
       <h1>Hironori Kuriaki</h1>
       <div class="tagline"></div>
-      <a href="https://note.com/nutsfall" rel="me"><i class="fa-solid fa-blog"></i></a>
-      <a href="https://twitter.com/nutsfall" rel="me"><i class="fa-brands fa-twitter"></i></a>
+      <a href="https://note.com/nutsfall" rel="me">
+        <i class="fa-solid fa-blog"></i>
+      </a>
+      <a href="https://twitter.com/nutsfall" rel="me">
+        <i class="fa-brands fa-twitter"></i>
+      </a>
     </main>
   </body>
 </html>
