--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <main>
       <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
-      <h1>Hironori Kuriaki</h1>
+      <h1 class="name">Hironori Kuriaki</h1>
       <div class="tagline"></div>
-      <a href="https://note.com/nutsfall" rel="me">
+      <a href="https://note.com/nutsfall" rel="me" class="brand_icon">
         <i class="fa-solid fa-blog"></i>
       </a>
-      <a href="https://twitter.com/nutsfall" rel="me">
+      <a href="https://twitter.com/nutsfall" rel="me" class="brand_icon">
         <i class="fa-brands fa-twitter"></i>
       </a>
     </main>
