--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
   </head>
   <body>
     <main>
-      <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
       <h1 class="name">Hironori Kuriaki</h1>
       <div class="tagline"></div>
+      <div class="brands">
+      <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
       <a href="https://note.com/nutsfall" rel="me" class="brand_icon">
         <i class="fa-solid fa-blog"></i>
       </a>
       <a href="https://twitter.com/nutsfall" rel="me" class="brand_icon">
         <i class="fa-brands fa-twitter"></i>
       </a>
+      </div>
     </main>
   </body>
 </html>
