--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <h1 class="name">Hironori Kuriaki</h1>
-      <div class="tagline"></div>
+      <div class="tagline">a person</div>
       <div class="brands">
       <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
       <a href="https://note.com/nutsfall" rel="me" class="brand_icon">
