name is just text not header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <h1 class="name">Hironori Kuriaki</h1>
+      <div class="name">Hironori Kuriaki</div>
       <div class="tagline">a person</div>
       <div class="brands">
       <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
