--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <main>
     <div class="name">Hironori Kuriaki</div>
-    <div class="tagline">a person</div>
+    <div class="tagline">Developer Relations and Supporter for the Development Team</div>
     <div class="brands">
       <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
       <a href="https://note.com/nutsfall" rel="me" class="brand_icon">
