open bluesky account

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <a href="https://twitter.com/nutsfall" rel="me" class="brand_icon">
         <i class="fa-brands fa-twitter"></i>
       </a>
+      <a href="https://bsky.app/profile/nutsfall.bsky.social" rel="me" class="brand_icon">
+        <i class="fa-brands fa-microblog"></i>
+      </a>
     </div>
   </main>
 </body>
