--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/0408cbb145.js" crossorigin="anonymous"></script>
-  <title>Hironori Kuriaki</title>
+  <title>KURIAKI Hironori</title>
 </head>
 
 <body>
   <main>
-    <div class="name">Hironori Kuriaki</div>
+    <div class="name">KURIAKI Hironori</div>
     <div class="tagline">Developer Relations | CSP</div>
     <div class="brands">
       <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
