change handle for bsky

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="https://twitter.com/nutsfall" rel="me" class="brand_icon">
         <i class="fa-brands fa-twitter"></i>
       </a>
-      <a href="https://bsky.app/profile/nutsfall.bsky.social" rel="me" class="brand_icon">
+      <a href="https://bsky.app/profile/nutsfall.me" rel="me" class="brand_icon">
         <i class="fa-brands fa-microblog"></i>
       </a>
     </div>
