--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <main>
     <div class="name">Hironori KURIAKI</div>
-    <div class="tagline">Developer Relations | CSP</div>
+    <div class="tagline">Developer Educations | CSP</div>
     <div class="brands">
       <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
       <a href="https://note.com/nutsfall" rel="me" class="brand_icon">
@@ -22,7 +22,7 @@
         <i class="fa-brands fa-twitter"></i>
       </a>
       <a href="https://bsky.app/profile/nutsfall.me" rel="me" class="brand_icon">
-        <i class="fa-brands fa-microblog"></i>
+        <i class="fa-brands fa-bluesky"></i>
       </a>
     </div>
   </main>
