--- a/index.html
+++ b/index.html
@@ -2,30 +2,17 @@
 <html>
 
 <head>
-  <meta name=”viewport” content=”width=device-width,initial-scale=1″>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
-  <link rel="stylesheet" href="css/style.css">
-  <script src="https://kit.fontawesome.com/0408cbb145.js" crossorigin="anonymous"></script>
-  <title>Hiro.KURIAKI</title>
+    <meta charset="utf-8">
+    <title>Redirecting&hellip;</title>
+    <link rel="canonical" href="/hiro/">
+    <script>location = "/hiro/"</script>
+    <meta http-equiv="refresh" content="0; url=/hiro/">
+    <meta name="robots" content="noindex">
 </head>
 
 <body>
-  <main>
-    <div class="name">Hironori KURIAKI</div>
-    <div class="tagline">Developer Educations | CSP</div>
-    <div class="brands">
-      <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
-      <a href="https://note.com/nutsfall" rel="me" class="brand_icon">
-        <i class="fa-regular fa-square-rss"></i>
-      </a>
-      <a href="https://twitter.com/nutsfall" rel="me" class="brand_icon">
-        <i class="fa-brands fa-twitter"></i>
-      </a>
-      <a href="https://bsky.app/profile/nutsfall.me" rel="me" class="brand_icon">
-        <i class="fa-brands fa-bluesky"></i>
-      </a>
-    </div>
-  </main>
+    <h1>Redirecting&hellip;</h1>
+    <a href="/hiro/">Click here if you are not redirected.</a>
 </body>
 
 </html>
