--- a/hiro/index.html
+++ b/hiro/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta name=”viewport” content=”width=device-width,initial-scale=1″>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <script src="https://kit.fontawesome.com/0408cbb145.js" crossorigin="anonymous"></script>
   <title>Hiro.KURIAKI</title>
 </head>
