--- a/hiro/index.html
+++ b/hiro/index.html
@@ -12,7 +12,7 @@
 <body>
   <main>
     <div class="name">Hironori KURIAKI</div>
-    <div class="tagline">Developer Educations | CSP</div>
+    <div class="tagline">Agile practitioner | CSP</div>
     <div class="brands">
       <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
       <a href="https://note.com/nutsfall" rel="me" class="brand_icon">
