--- a/hiro/index.html
+++ b/hiro/index.html
@@ -19,10 +19,13 @@
         <i class="fa-regular fa-square-rss"></i>
       </a>
       <a href="https://twitter.com/nutsfall" rel="me" class="brand_icon">
-        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-square-twitter"></i>
       </a>
       <a href="https://bsky.app/profile/nutsfall.me" rel="me" class="brand_icon">
-        <i class="fa-brands fa-bluesky"></i>
+        <i class="fa-brands fa-square-bluesky"></i>
+      </a>
+      <a href="https://mixi.social/@hiro13" rel="me" class="brand_icon">
+        <i class="fa-solid fa-hashtag"></i>
       </a>
     </div>
   </main>
