--- a/hiro/index.html
+++ b/hiro/index.html
@@ -21,7 +21,7 @@
       <a href="https://twitter.com/nutsfall" rel="me" class="brand_icon">
         <i class="fa-brands fa-square-twitter"></i>
       </a>
-      <a href="https://bsky.app/profile/nutsfall.me" rel="me" class="brand_icon">
+      <a href="https://bsky.app/profile/hiroqli.bsky.social" rel="me" class="brand_icon">
         <i class="fa-brands fa-square-bluesky"></i>
       </a>
     </div>
